UI With error handling
